--- a/src/plugins/auth/i18n/en.json
+++ b/src/plugins/auth/i18n/en.json
@@ -1,15 +1,42 @@
 {
-  "email": "Email",
-  "password": "Password",
-  "name": "Name",
-  "confirmPassword": "Confirm Password",
-  "signIn": "Sign In",
-  "signUp": "Sign Up",
-  "signOut": "Sign Out",
-  "forgotPassword": "Forgot Password?",
-  "loginFailed": "Login failed, please try again",
-  "registerFailed": "Registration failed, please try again",
-  "registerSuccess": "Registration successful! Please check your email to verify your account.",
-  "passwordMismatch": "Passwords do not match",
-  "passwordTooShort": "Password must be at least 6 characters"
+  "login": {
+    "title": "Login",
+    "description": "Enter your email below to login to your account",
+    "email": "Email",
+    "emailPlaceholder": "m@example.com",
+    "password": "Password",
+    "forgotPassword": "Forgot your password?",
+    "loginButton": "Login",
+    "loginWithGoogle": "Login with Google",
+    "noAccount": "Don't have an account?",
+    "signUp": "Sign up"
+  },
+  "register": {
+    "title": "Create an account",
+    "description": "Enter your details below to create your account",
+    "name": "Name",
+    "namePlaceholder": "Enter your name",
+    "email": "Email",
+    "emailPlaceholder": "m@example.com",
+    "password": "Password",
+    "passwordPlaceholder": "Enter your password",
+    "confirmPassword": "Confirm Password",
+    "confirmPasswordPlaceholder": "Confirm your password",
+    "createButton": "Create account",
+    "alreadyHaveAccount": "Already have an account?",
+    "signIn": "Sign in"
+  },
+  "common": {
+    "loading": "Loading...",
+    "backToHome": "Back to Home"
+  },
+  "errors": {
+    "loginFailed": "Login failed, please try again",
+    "registerFailed": "Registration failed, please try again",
+    "passwordMismatch": "Passwords do not match",
+    "passwordTooShort": "Password must be at least 6 characters"
+  },
+  "success": {
+    "registerSuccess": "Registration successful! Please check your email to verify your account."
+  }
 }
