--- a/src/framework/i18n/en.json
+++ b/src/framework/i18n/en.json
@@ -24,7 +24,6 @@
     "learnMore": "Learn More",
     "or": "or",
     "createAccount": "Create New Account",
-    "backToHome": "Back to Home",
     "language": "Language",
     "switchLanguage": "Switch Language",
     "myAccount": "My Account",
@@ -37,7 +36,13 @@
     "copyright": "© 2024 Plugin Framework. All rights reserved.",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
-    "gotoConsole": "Console"
+    "gotoConsole": "Console",
+    "errorSource": "Source",
+    "unknownError": "Unknown error",
+    "appCrashedTitle": "Application Error",
+    "reload": "Reload",
+    "notFound": "Page Not Found",
+    "backToHome": "Back to Home"
   },
   "navigation": {
     "dashboard": "Dashboard",
