--- a/src/plugins/auth/i18n/en.json
+++ b/src/plugins/auth/i18n/en.json
@@ -31,6 +31,7 @@
   "common": {
     "loading": "Loading...",
     "backToHome": "Back to Home",
+    "signIn": "Sign In",
     "signOut": "Sign Out"
   },
   "errors": {
