--- a/src/plugins/auth/i18n/zh.json
+++ b/src/plugins/auth/i18n/zh.json
@@ -31,6 +31,7 @@
   "common": {
     "loading": "加载中...",
     "backToHome": "返回首页",
+    "signIn": "登录",
     "signOut": "退出登录"
   },
   "errors": {
